# rustytracker

./: .coderabbit.yaml  .gitignore  Cargo.toml  README.md
crates/rustytracker-cli/: Cargo.toml
crates/rustytracker-cli/schema/: module-dump.schema.json
crates/rustytracker-cli/src/: api.rs  error.rs  lib.rs  main.rs
crates/rustytracker-cli/tests/: api.rs  dump_cli.rs  regression.rs
crates/rustytracker-cli/tests/golden/: milky.json  milky.xm.play_state.json  pcm_hashes.json  slumberjack.json  slumberjack.xm.play_state.json  sv_ttt.json  sv_ttt.xm.play_state.json  synthetic_mod.play_state.json  theday.json  theday.xm.play_state.json  universalnetwork2_real.json  universalnetwork2_real.xm.play_state.json
crates/rustytracker-core/: Cargo.toml
crates/rustytracker-core/src/: lib.rs  validation.rs
crates/rustytracker-core/tests/: core_contracts.rs
crates/rustytracker-edit/: Cargo.toml
crates/rustytracker-edit/src/: lib.rs
crates/rustytracker-edit/tests/: edit_tests.rs
crates/rustytracker-mod/: Cargo.toml
crates/rustytracker-mod/src/: error.rs  lib.rs
crates/rustytracker-mod/tests/: mod_tests.rs
crates/rustytracker-play/: Cargo.toml
crates/rustytracker-play/src/: channel.rs  cursor.rs  effects.rs  envelope.rs  error.rs  flow.rs  lib.rs  mixer.rs  mode.rs  preview.rs  render.rs  sample.rs  sequencer.rs  state.rs  timing.rs  warmth.rs
crates/rustytracker-play/tests/: cursor.rs  mixer_mode.rs  preview.rs  sample_swap.rs
crates/rustytracker-test-support/: Cargo.toml
crates/rustytracker-test-support/src/: lib.rs
crates/rustytracker-ui/: Cargo.toml
crates/rustytracker-ui/src/: app.rs  audio.rs  effect_entry.rs  input.rs  io.rs  main.rs  panels.rs  playback.rs  tracker_ui.rs
crates/rustytracker-wasm/: Cargo.toml
crates/rustytracker-wasm/src/: lib.rs
crates/rustytracker-xm/: Cargo.toml
crates/rustytracker-xm/src/: error.rs  lib.rs  model.rs  parser.rs  writer.rs
crates/rustytracker-xm/tests/: api.rs  header_fixtures.rs  instrument_fixtures.rs  module_fixtures.rs  writer_fixtures.rs
docs/: architecture-overview.md
docs/specs/: 000-architecture.md  001-core-model.md  002-tdd-plan.md  003-core-file-map.md  004-orders-names-instruments.md  005-xm-parser.md  006-coding-standards.md  007-roadmap-and-tasks.md  008-structural-dump-cli.md  009-xm-writer.md  010-reference-specs.md  011-playback-skeleton.md  012-tracker-ui-look-and-feel.md  013-ai-review-policy.md  013-ios-database-implementation.md
docs/superpowers/plans/: 2026-06-29-sample-preview-and-rustysynth-rebrand.md  2026-06-30-rustysynth-cubic-warmth.md
docs/superpowers/specs/: 2026-06-29-sample-preview-and-rustysynth-rebrand-design.md  (+1 more)
scripts/: build_wasm_web.sh
web/: README.md  app.js  index.html  styles.css
(+11 files in other folders)
