[package]
name = "rustytracker-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rustytracker"
path = "src/main.rs"

[dependencies]
rustytracker-core = { path = "../rustytracker-core" }
rustytracker-play = { path = "../rustytracker-play" }
rustytracker-xm = { path = "../rustytracker-xm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
