[package]
name = "rustytracker-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustytracker-core = { path = "../rustytracker-core" }
rustytracker-play = { path = "../rustytracker-play" }
rustytracker-edit = { path = "../rustytracker-edit" }
rustytracker-xm = { path = "../rustytracker-xm" }
rustytracker-mod = { path = "../rustytracker-mod" }
eframe = "0.31.1"
rfd = "0.17.2"
cpal = "0.15"
rtrb = "0.3.4"
