[package]
name = "rustytracker-wasm"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rustytracker-core = { path = "../rustytracker-core" }
rustytracker-play = { path = "../rustytracker-play" }
rustytracker-xm = { path = "../rustytracker-xm" }
rustytracker-mod = { path = "../rustytracker-mod" }
