[package]
name = "rustytracker-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rustytracker-core = { path = "../rustytracker-core" }
rustytracker-play = { path = "../rustytracker-play" }
rustytracker-xm = { path = "../rustytracker-xm" }
rustytracker-mod = { path = "../rustytracker-mod" }
